--- a/web/styles/general.css
+++ b/web/styles/general.css
@@ -146,6 +146,7 @@ h4, h5, h6 {
 
 h1, h2, h3, h4, h5, h6, strong {
 	font-weight: bold;
+        text-decoration: underline;
 }
 
 /* ---------- Text formatting ---------- */
