--- a/web/styles/comp_prime.css
+++ b/web/styles/comp_prime.css
@@ -1,6 +1,22 @@
-.ui-state-default, .ui-widget-content .ui-state-default, .ui-widget-header .ui-state-default {
-    font: 70%/1.4 Arial, Helvetica, Verdana, sans-serif;
-    font-size: 12px;
+/*.ui-state-active, .ui-widget-content .ui-state-active, .ui-widget-header .ui-state-active {
+    background: url("/wpsoft/javax.faces.resource/images/active.png.xhtml?ln=primefaces-casablanca") repeat-x scroll 50% 50% #FFFFFF;
+    border: 1px solid #AAAAAA;
+    color: #000000;
+    font-weight: normal;
+}*/
+
+.ui-state-hover, .ui-widget-content .ui-state-hover, .ui-widget-header .ui-state-hover, .ui-state-focus, .ui-widget-content .ui-state-focus, .ui-widget-header .ui-state-focus {
+    background: url("/wpsoft/javax.faces.resource/images/active.png.xhtml?ln=primefaces-casablanca") repeat-x scroll 50% 50% #FFFFFF;
+    border: 1px solid #B4A9A0;
+    color: #000000;
+    font-weight: normal;
+}
+
+.ui-state-active, .ui-widget-content .ui-state-active, .ui-widget-header .ui-state-active {
+    background: repeat-x scroll 50% 50% #FFFFFF;
+    border: 1px solid #AAAAAA;
+    color: #000000;
+    font-weight: normal;
 }
 
 .ui-datatable table {
